[linux] remove daemontools dep from upstart scripts

--- a/files/sensu-gem/upstart/sensu-api.conf
+++ b/files/sensu-gem/upstart/sensu-api.conf
@@ -2,12 +2,13 @@
 
 description "sensu api"
 
-start on (local-filesystems and net-device-up)
+start on (remote-filesystems and net-device-up)
 stop on [!12345]
 
 respawn
 
 env PROG=sensu-service
+env USER=sensu
 
 chdir /opt/sensu/bin
 
@@ -15,12 +16,5 @@ pre-start script
   test -x ./$PROG || { stop; exit 0; }
 end script
 
-script
-  USER=sensu
-
-  if [ -f /etc/default/sensu ]; then
-    . /etc/default/sensu
-  fi
-
-  exec setuidgid $USER ./$PROG start api
-end script
+setuid $USER
+exec ./$PROG start api
