--- a/files/sensu-gem/upstart/sensu-client.conf
+++ b/files/sensu-gem/upstart/sensu-client.conf
@@ -1,15 +1,14 @@
 # Upstart: /etc/init/sensu-client.conf
 
-OPTIONS="start client"
-
 description "sensu client"
 
-start on (local-filesystems and net-device-up)
+start on (remote-filesystems and net-device-up)
 stop on [!12345]
 
 respawn
 
 env PROG=sensu-service
+env USER=sensu
 
 chdir /opt/sensu/bin
 
@@ -17,11 +16,6 @@ pre-start script
   test -x ./$PROG || { stop; exit 0; }
 end script
 
-script
-  USER=sensu
+setuid $USER
+exec ./$PROG start client
 
-  if [ -f /etc/default/sensu ]; then
-      . /etc/default/sensu
-  fi
-  exec setuidgid $USER $PROG start client
-end script
