--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,3 +1,12 @@
+<%
+build_version = ENV["SENSU_VERSION"]
+build_iteration = ENV["BUILD_NUMBER"]
+
+unless build_version && build_iteration
+  raise "SENSU_VERSION and BUILD_NUMBER must be set"
+end
+%>
+
 driver:
   name: vagrant
   forward_agent: yes
@@ -37,10 +46,13 @@ platforms:
 
 suites:
   - name: default
-    run_list: omnibus::default
+    run_list:
+    - omnibus_sensu::default
     attributes:
       omnibus:
         build_user:          vagrant
         build_user_group:    vagrant
         build_user_password: vagrant
-        install_dir:         /opt/sensu
+      omnibus_sensu:
+        build_version: "<%= build_version %>"
+        build_iteration: "<%= build_iteration %>"
