--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,6 +27,8 @@ platforms:
     run_list: yum-epel::default
   - name: centos-5.11
     run_list: yum-epel::default
+  - name: centos-5.11-i386
+    run_list: yum-epel::default
   - name: debian-7.8
     run_list: apt::default
   - name: debian-6.0.10
@@ -42,6 +44,8 @@ platforms:
   - name: ubuntu-14.04
     run_list: apt::default
   - name: ubuntu-12.04
+    run_list: apt::default
+  - name: ubuntu-12.04-i386
     run_list: apt::default
 
 suites:
