--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -41,7 +41,7 @@ platforms:
       - freebsd::pkgng
   - name: freebsd-10.3
     run_list:
-      - freebsd::portsnap
+      - omnibus_sensu::freebsd_portsnap
       - freebsd::pkgng
   - name: freebsd-9.3
     run_list:
