--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -31,8 +31,20 @@ provisioner:
 platforms:
   - name: centos-7.1
     run_list: yum-epel::default
+    driver:
+      synced_folders:
+        - ['.', '/home/vagrant/sensu', 'type: :rsync']
+        <% if gpg_passphrase && gnupg_path %>
+        - ['<%= gnupg_path %>', '/home/vagrant/.gnupg', 'type: :rsync']
+        <% end %>
   - name: centos-6.6
     run_list: yum-epel::default
+    driver:
+      synced_folders:
+        - ['.', '/home/vagrant/sensu', 'type: :rsync']
+        <% if gpg_passphrase && gnupg_path %>
+        - ['<%= gnupg_path %>', '/home/vagrant/.gnupg', 'type: :rsync']
+        <% end %>
   - name: centos-5.11
     run_list: yum-epel::default
     driver:
