--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -48,6 +48,7 @@ platforms:
   - name: centos-5.11
     run_list: yum-epel::default
     driver:
+      box: sensu/centos-5.11
       synced_folders:
         - ['.', '/home/vagrant/sensu', 'type: :rsync']
         <% if gpg_passphrase && gnupg_path %>
