--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ before_install:
 - gem update --system
 - gem --version
 - gem install bundler --version 1.11.2
-script: openssl aes-256-cbc -K $encrypted_d8b89d758c52_key -iv $encrypted_d8b89d758c52_iv
-  -in sensu-omnibus-artifact-builder.pem.enc -out sensu-omnibus-artifact-builder.pem
-  -d && ./build.sh
+- "openssl aes-256-cbc -K $encrypted_d8b89d758c52_key -iv $encrypted_d8b89d758c52_iv -in sensu-omnibus-artifact-builder.pem.enc -out sensu-omnibus-artifact-builder.pem -d"
+script: build.sh
 branches:
   only:
   - master
