--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - gem update --system
 - gem --version
 - gem install bundler --version 1.11.2
-- "openssl aes-256-cbc -K $encrypted_d8b89d758c52_key -iv $encrypted_d8b89d758c52_iv -in sensu-omnibus-artifact-builder.pem.enc -out sensu-omnibus-artifact-builder.pem -d"
+- "openssl aes-256-cbc -K $encrypted_d8b89d758c52_key -iv $encrypted_d8b89d758c52_iv -in .travis/sensu-omnibus-artifact-builder.pem.enc -out .travis/sensu-omnibus-artifact-builder.pem -d"
 script: build.sh
 branches:
   only:
