--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -8,8 +8,8 @@ aws_ssh_key_path = ENV["AWS_SSH_KEY_PATH"]
 
 artifactory = {}
 artifactory[:repository] = ENV["ARTIFACTORY_REPOSITORY"]
-artifactory[:base_path] = ENV["ARTIFACTORY_BASE_PATH"]
-artifactory[:endpoint] = ENV["ARTIFACTORY_ENDPOINT"]
+artifactory[:base_path] = ENV.fetch("ARTIFACTORY_BASE_PATH", "com/sensuapp")
+artifactory[:endpoint] = ENV.fetch("ARTIFACTORY_ENDPOINT", "https://sensu.jfrog.io/sensu")
 artifactory[:username] = ENV["ARTIFACTORY_USERNAME"]
 artifactory[:password] = ENV["ARTIFACTORY_PASSWORD"]
 artifactory_enabled = !artifactory.any? { |k,v| v.nil? }
@@ -33,7 +33,9 @@ end
 driver:
   name: ec2
   instance_type: m3.medium
-  iam_profile_name: sensu-omnibus-artifact-manager
+  <% if ENV['AWS_IAM_PROFILE_NAME'] %>
+  iam_profile_name: <% ENV['AWS_IAM_PROFILE_NAME'] %>
+  <% end %>
   <% unless aws_ssh_key_id.nil? %>
   aws_ssh_key_id: <%= aws_ssh_key_id %>
   <% end %>
