--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ env:
   matrix:
   - BUILD_PLATFORM=debian-7
   - BUILD_PLATFORM=debian-7-i386
-  - BUILD_PLATFORM=debian-6
+  - BUILD_PLATFORM=debian-6-x86-64
+  - BUILD_PLATFORM=debian-6-i386
   - BUILD_PLATFORM=ubuntu-1604
   - BUILD_PLATFORM=ubuntu-1404
   - BUILD_PLATFORM=ubuntu-1204
