--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -66,17 +66,34 @@ provisioner:
 platforms:
   - name: centos-7
     run_list: yum-epel::default
+  - name: centos-7-i386
+    run_list: yum-epel::default
   - name: centos-6
+    run_list: yum-epel::default
+  - name: centos-6-i386
     run_list: yum-epel::default
   - name: centos-5
     driver:
       image_id: ami-2a911c1a
+      instance_type: m1.medium
+      user_data: "user-data/centos5.sh"
+    transport:
+      username: root
     run_list: yum-epel::default
   - name: centos-5-i386
     driver:
-      image_id: ami-2a911c1a
+      image_id: ami-60f77a50
       instance_type: m1.medium
+      user_data: "user-data/centos5.sh"
+    transport:
+      username: root
     run_list: yum-epel::default
+  - name: debian-8
+    run_list: apt::default
+  - name: debian-8-i386
+    driver:
+      instance_type: m1.medium
+    run_list: apt::default
   - name: debian-7
     run_list: apt::default
   - name: debian-7-i386
@@ -89,8 +106,22 @@ platforms:
     run_list:
       - omnibus_sensu::freebsd_portsnap
       - freebsd::pkgng
+  - name: freebsd-11-i386
+    driver:
+      instance_type: m1.medium
+      user_data: "user-data/freebsd.sh"
+    run_list:
+      - omnibus_sensu::freebsd_portsnap
+      - freebsd::pkgng
   - name: freebsd-10
     driver:
+      user_data: "user-data/freebsd.sh"
+    run_list:
+      - omnibus_sensu::freebsd_portsnap
+      - freebsd::pkgng
+  - name: freebsd-10-i386
+    driver:
+      instance_type: m1.medium
       user_data: "user-data/freebsd.sh"
     run_list:
       - omnibus_sensu::freebsd_portsnap
@@ -101,9 +132,20 @@ platforms:
     run_list:
       - freebsd::portsnap
       - freebsd::pkgng
+  - name: freebsd-9-i386
+    driver:
+      instance_type: m1.medium
+      user_data: "user-data/freebsd.sh"
+    run_list:
+      - freebsd::portsnap
+      - freebsd::pkgng
   - name: ubuntu-16.04
     run_list: apt::default
+  - name: ubuntu-16.04-i386
+    run_list: apt::default
   - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-14.04-i386
     run_list: apt::default
   - name: ubuntu-12.04
     run_list: apt::default
