--- a/.travis.yml
+++ b/.travis.yml
@@ -16,17 +16,26 @@ branches:
   - "/^v\\d.*\\.\\d.*\\.\\d.*-.*\\d$/"
 env:
   matrix:
+  - BUILD_PLATFORM=debian-8
+  - BUILD_PLATFORM=debian-8-i386
   - BUILD_PLATFORM=debian-7
   - BUILD_PLATFORM=debian-7-i386
   - BUILD_PLATFORM=ubuntu-1604
+  - BUILD_PLATFORM=ubuntu-1604-i386
   - BUILD_PLATFORM=ubuntu-1404
+  - BUILD_PLATFORM=ubuntu-1404-i386
   - BUILD_PLATFORM=ubuntu-1204
   - BUILD_PLATFORM=ubuntu-1204-i386
   - BUILD_PLATFORM=centos-7
+  - BUILD_PLATFORM=centos-7-i386
   - BUILD_PLATFORM=centos-6
+  - BUILD_PLATFORM=centos-6-i386
   - BUILD_PLATFORM=freebsd-11
+  - BUILD_PLATFORM=freebsd-11-i386
   - BUILD_PLATFORM=freebsd-10
+  - BUILD_PLATFORM=freebsd-10-i386
   - BUILD_PLATFORM=freebsd-9
+  - BUILD_PLATFORM=freebsd-9-i386
   global:
   - AWS_REGION=us-west-2
   - AWS_S3_CACHE_BUCKET=sensu-omnibus-cache
