--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -131,10 +131,14 @@ platforms:
   - name: ubuntu-16.04
     run_list: apt::default
   - name: ubuntu-16.04-i386
+    driver:
+      instance_type: m1.medium
     run_list: apt::default
   - name: ubuntu-14.04
     run_list: apt::default
   - name: ubuntu-14.04-i386
+    driver:
+      instance_type: m1.medium
     run_list: apt::default
   - name: ubuntu-12.04
     run_list: apt::default
