allow travis to fail for debian 8, centos 7 and ubuntu 1604 i386 builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,10 @@ env:
   - BUILD_PLATFORM=freebsd-10-i386
   - BUILD_PLATFORM=freebsd-9
   - BUILD_PLATFORM=freebsd-9-i386
+    allow_failures:
+      - env: BUILD_PLATFORM=debian-8-i386
+      - env: BUILD_PLATFORM=centos-7-i386
+      - env: BUILD_PLATFORM=ubuntu-1604-i386
   global:
   - AWS_REGION=us-west-2
   - AWS_S3_CACHE_BUCKET=sensu-omnibus-cache
