More updates to Test Kitchen & Travis bits (#79)
* add tags to kitchen.cloud.yml

* remove artifactory bits

* update s3 publishing to enable caching, produce live stream of build

* fix travis job number tag in .kitchen.cloud.yml

* really fix travis job number tag in .kitchen.cloud.yml

* more travis.yml and kitchen.cloud.yml fixes

* fix ssh key id in travis.yml

* add superfluous trailing space to omnibus build command in default recipe

* use edit_resource instead of edit_resource!, reorder recipe

* set action :nothing on edit_resource invocations

* update cookbook to use fork of omnibus cookbook for live_stream support

* update omnibus dependency in omnibus_sensu cookbook

* update s3 publishing command to use artifact_bucket attribute

* fix s3 bucket name env vars in travis.yml

* move omnibus.rb to template, remove aws secrets from shared env

* rotate aws keys in travis.yml

* apply user-data script to all freebsd platforms

* explicitly specify cpu arch on debian 6 platforms

* add specific centos-5 targets

* remove debian 6 as it is EOL

* turn on live_stream for execute resources in freebsd_portsnap recipe

* make omnibus s3 caching contingent on s3 cache bucket attribute

* add more i386 builds, improve centos 5 support

* remove freebsd-11-i386 build for lack of public ami

* use custom packer-built amis for centos5

* readd centos-5 targets to travis build matrix

* adjust location of live_stream properites in freebsd_portsnap recipe

* add slack notifications to travis.yml

* add working centos 6 32bit ami

* set instance type for ubuntu trusty and xenial i386 builds

* use portsnap interactive in freebsd 11

* completely replace kitchen.yml with kitchen.cloud.yml

* use amdprophet freebsd cookbook fork until changes are merged upstream

* allow travis to fail for debian 8, centos 7 and ubuntu 1604 i386 builds

* remove freebsd-9 from build matrix

* update centos 5 amis to av

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,6 +3,19 @@ build_version = ENV["SENSU_VERSION"]
 build_iteration = ENV["BUILD_NUMBER"]
 gpg_passphrase = ENV["GPG_PASSPHRASE"]
 gnupg_path = ENV["GNUPG_PATH"]
+aws_ssh_key_id = ENV["AWS_SSH_KEY_ID"]
+aws_ssh_key_path = ENV["AWS_SSH_KEY_PATH"]
+
+s3 = {}
+s3[:region] = ENV["AWS_REGION"]
+s3[:artifact_bucket] = ENV["AWS_S3_ARTIFACT_BUCKET"]
+s3[:cache_bucket] = ENV["AWS_S3_CACHE_BUCKET"]
+s3_enabled = !s3.any? { |k,v| v.nil? }
+
+if ENV.key?("AWS_ACCESS_KEY_ID") && ENV.key?("AWS_SECRET_ACCESS_KEY")
+  s3.merge!(:access_key_id => ENV["AWS_ACCESS_KEY_ID"])
+  s3.merge!(:secret_access_key => ENV["AWS_SECRET_ACCESS_KEY"])
+end
 
 if gpg_passphrase && gnupg_path
   # no-op
@@ -16,79 +29,109 @@ end
 %>
 
 driver:
-  name: vagrant
-  forward_agent: yes
-  customize:
-    cpus: 2
-    memory: 2048
-  synced_folders:
-    - ['.', '/home/vagrant/sensu', 'type: :rsync']
+  name: ec2
+  instance_type: m3.medium
+  <% if ENV['AWS_IAM_PROFILE_NAME'] %>
+  iam_profile_name: <% ENV['AWS_IAM_PROFILE_NAME'] %>
+  <% end %>
+  <% unless aws_ssh_key_id.nil? %>
+  aws_ssh_key_id: <%= aws_ssh_key_id %>
+  <% end %>
+  tags:
+    "Name": "sensu-omnibus-artifact-builder <%= ENV['BUILD_PLATFORM'] %>"
+    "created-by": "test-kitchen"
+  <% if ENV['TRAVIS'] == 'true' %>
+    "travis-job-number": "<%= ENV['TRAVIS_JOB_NUMBER'].nil? ? 'unknown' : ENV['TRAVIS_JOB_NUMBER'] %>"
+  <% end %>
+<% unless aws_ssh_key_path.nil? %>
+transport:
+  ssh_key: <%= aws_ssh_key_path %>
+<% end %>
 
 provisioner:
   name: chef_zero
   require_chef_omnibus: 12.13.37
+  attributes:
+    omnibus_sensu:
+      publishers:
+        <% if s3_enabled %>
+        s3:
+          region: <%= s3[:region] %>
+          access_key_id: <%= s3[:access_key_id] %>
+          secret_access_key: <%= s3[:secret_access_key] %>
+          artifact_bucket: <%= s3[:artifact_bucket] %>
+          cache_bucket: <%= s3[:cache_bucket] %>
+        <% end %>
 
 platforms:
-  - name: centos-7.1
+  - name: centos-7
     run_list: yum-epel::default
-    driver:
-      synced_folders:
-        - ['.', '/home/vagrant/sensu', 'type: :rsync']
-        <% if gpg_passphrase && gnupg_path %>
-        - ['<%= gnupg_path %>', '/home/vagrant/.gnupg', 'type: :rsync']
-        <% end %>
-  - name: centos-6.6
+  - name: centos-7-i386
     run_list: yum-epel::default
-    driver:
-      synced_folders:
-        - ['.', '/home/vagrant/sensu', 'type: :rsync']
-        <% if gpg_passphrase && gnupg_path %>
-        - ['<%= gnupg_path %>', '/home/vagrant/.gnupg', 'type: :rsync']
-        <% end %>
-  - name: centos-5.11
+  - name: centos-6
     run_list: yum-epel::default
+  - name: centos-6-i386
     driver:
-      box: sensu/centos-5.11
-      synced_folders:
-        - ['.', '/home/vagrant/sensu', 'type: :rsync']
-        <% if gpg_passphrase && gnupg_path %>
-        - ['<%= gnupg_path %>', '/home/vagrant/.gnupg', 'type: :rsync']
-        <% end %>
-  - name: centos-5.11-i386
-    driver:
-      synced_folders:
-        - ['.', '/home/vagrant/sensu', 'type: :rsync']
-        <% if gpg_passphrase && gnupg_path %>
-        - ['<%= gnupg_path %>', '/home/vagrant/.gnupg', 'type: :rsync']
-        <% end %>
+      image_id: ami-4fbf2f7f
+      instance_type: m1.medium
     run_list: yum-epel::default
-  - name: debian-7.8
+  - name: centos-5
+    driver:
+      image_id: ami-eee0558e
+    run_list: yum-epel::default
+  - name: centos-5-i386
+    driver:
+      image_id: ami-54ec5934
+      instance_type: m1.medium
+    run_list: yum-epel::default
+  - name: debian-8
     run_list: apt::default
-  - name: debian-7.8-i386
-    run_list: apt::default
-  - name: debian-6.0.10
-    run_list: apt::default
-  - name: freebsd-11.0
+  - name: debian-8-i386
     driver:
-      box: sensu/freebsd-11.0
+      instance_type: m1.medium
+    run_list: apt::default
+  - name: debian-7
+    run_list: apt::default
+  - name: debian-7-i386
+    driver:
+      instance_type: m1.medium
+    run_list: apt::default
+  - name: freebsd-11
+    driver:
+      user_data: "user-data/freebsd.sh"
     run_list:
       - omnibus_sensu::freebsd_portsnap
       - freebsd::pkgng
-  - name: freebsd-10.3
+  - name: freebsd-10
+    driver:
+      user_data: "user-data/freebsd.sh"
     run_list:
       - omnibus_sensu::freebsd_portsnap
       - freebsd::pkgng
-  - name: freebsd-9.3
+  - name: freebsd-10-i386
+    driver:
+      instance_type: m1.medium
+      user_data: "user-data/freebsd.sh"
     run_list:
-      - freebsd::portsnap
+      - omnibus_sensu::freebsd_portsnap
       - freebsd::pkgng
   - name: ubuntu-16.04
     run_list: apt::default
+  - name: ubuntu-16.04-i386
+    driver:
+      instance_type: m1.medium
+    run_list: apt::default
   - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-14.04-i386
+    driver:
+      instance_type: m1.medium
     run_list: apt::default
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-12.04-i386
+    driver:
+      instance_type: m1.medium
     run_list: apt::default
 
 suites:
@@ -96,10 +139,6 @@ suites:
     run_list:
     - omnibus_sensu::default
     attributes:
-      omnibus:
-        build_user:          vagrant
-        build_user_group:    vagrant
-        build_user_password: vagrant
       omnibus_sensu:
         build_version: "<%= build_version %>"
         build_iteration: "<%= build_iteration %>"
