--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -133,6 +133,13 @@ platforms:
     transport:
       name: winrm
       elevated: true
+  - name: windows-2012-r2-i386
+    driver:
+      image_id: ami-1562d075
+      instance_type: m3.xlarge
+    transport:
+      name: winrm
+      elevated: true
 
 suites:
   - name: default
@@ -143,3 +150,4 @@ suites:
         build_version: "<%= build_version %>"
         build_iteration: "<%= build_iteration %>"
         gpg_passphrase: "<%= gpg_passphrase %>"
+        project_revision: "windows-32bit-openssl"
