[test-kitchen] fix up ebs block device mappings

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -83,15 +83,25 @@ platforms:
     run_list: yum-epel::default
   - name: debian-8
     run_list: apt::default
-  - name: debian-8-i386
     driver:
-      instance_type: m1.medium
-    run_list: apt::default
+      block_device_mappings:
+        - device_name: /dev/xvda
+          ebs:
+            delete_on_termination: true
   - name: debian-7
     run_list: apt::default
+    driver:
+      block_device_mappings:
+        - device_name: /dev/xvda
+          ebs:
+            delete_on_termination: true
   - name: debian-7-i386
     driver:
       instance_type: m1.medium
+      block_device_mappings:
+        - device_name: /dev/sda
+          ebs:
+            delete_on_termination: true
     run_list: apt::default
   - name: freebsd-11
     driver:
