Finishing touches for Mac packages (#158)
* use virtualbox for mac builds

* add sensu background for mac installer

* center license content & update welcome message for mac

* set pkg parameters and use dmg to compress mac packages

* update dmg background & icon

* update mac documentation

Conflicts:
	resources/sensu/dmg/background.png
	resources/sensu/dmg/icon.png
	resources/sensu/pkg/background.png
	resources/sensu/pkg/license.html.erb
	resources/sensu/pkg/welcome.html.erb

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -154,6 +154,7 @@ platforms:
 suites:
   - name: default
     run_list:
+    - build-essential::default
     - omnibus_sensu::default
     attributes:
       omnibus_sensu:
