--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,6 +23,7 @@ end
 driver:
   name: ec2
   instance_type: m3.medium
+  retryable_tries: 120
   <% if ENV['AWS_IAM_PROFILE_NAME'] %>
   iam_profile_name: <% ENV['AWS_IAM_PROFILE_NAME'] %>
   <% end %>
