--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ env:
   - BUILD_PLATFORM=debian-8
   - BUILD_PLATFORM=centos-7
   - BUILD_PLATFORM=ubuntu-1604
-  - BUILD_PLATFORM=windows-2012-r2 TRAVIS_WAIT=120
-  - BUILD_PLATFORM=windows-2012-r2-i386 TRAVIS_WAIT=120
+  - BUILD_PLATFORM=windows-2012-r2 TRAVIS_WAIT=120 WINDOWS_TARGET_VERSION=2012r2
+  - BUILD_PLATFORM=windows-2012-r2-i386 TRAVIS_WAIT=120 WINDOWS_TARGET_VERSION=2012r2
+  - BUILD_PLATFORM=windows-2012-r2 TRAVIS_WAIT=120 WINDOWS_TARGET_VERSION=2008
+  - BUILD_PLATFORM=windows-2012-r2-i386 TRAVIS_WAIT=120 WINDOWS_TARGET_VERSION=2008
   - BUILD_PLATFORM=debian-7
   - BUILD_PLATFORM=debian-7-i386
   - BUILD_PLATFORM=ubuntu-1404
