chomp that newline

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -161,7 +161,7 @@ suites:
     - omnibus_sensu::default
     attributes:
       omnibus_sensu:
-        project_revision: "<%= ENV['PROJECT_REVISION'] || `git rev-parse HEAD` %>"
+        project_revision: "<%= ENV['PROJECT_REVISION'] || `git describe --all`.chomp %>"
         build_version: "<%= build_version %>"
         build_iteration: "<%= build_iteration %>"
         gpg_passphrase: "<%= ENV['GPG_PASSPHRASE'] %>"
